cpp01 수정 및 평가준비

--- a/cpp01/ex01/Makefile
+++ b/cpp01/ex01/Makefile
@@ -6,16 +6,14 @@
 #    By: jiwolee <jiwolee@student.42seoul.kr>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/11/16 15:54:12 by jiwolee           #+#    #+#              #
-#    Updated: 2022/11/18 16:07:18 by jiwolee          ###   ########seoul.kr   #
+#    Updated: 2022/11/30 18:49:55 by jiwolee          ###   ########seoul.kr   #
 #                                                                              #
 # **************************************************************************** #
 
 NAME	= moar_brainz
 
-CC		= c++
-CFLAG	= -Wall -Wextra -Werror -std=c++98 -pedantic
-
-#HEADER	= ./Account.hpp
+CXX		= c++
+CXXFLAG	= -Wall -Wextra -Werror -std=c++98 -pedantic
 
 SRC		= ./main.cpp\
 		  ./Zombie.cpp\
@@ -23,13 +21,13 @@ SRC		= ./main.cpp\
 
 OBJS	= $(SRC:.cpp=.o)
 
-%.o : %.cpp #$(HEADER)
-		$(CC) $(CFLAG) -c -o $@ $^
+%.o : %.cpp
+		$(CXX) $(CXXFLAG) -c -o $@ $^
 
 all : $(NAME)
 
 $(NAME) : $(OBJS)
-		$(CC) $(CFLAG) -o $@ $^
+		$(CXX) $(CXXFLAG) -o $@ $^
 
 clean :
 		rm -f $(OBJS)
