--- a/cpp01/ex00/Makefile
+++ b/cpp01/ex00/Makefile
@@ -6,14 +6,14 @@
 #    By: jiwolee <jiwolee@student.42seoul.kr>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/11/16 15:54:12 by jiwolee           #+#    #+#              #
-#    Updated: 2022/11/30 16:42:21 by jiwolee          ###   ########seoul.kr   #
+#    Updated: 2022/11/30 18:49:18 by jiwolee          ###   ########seoul.kr   #
 #                                                                              #
 # **************************************************************************** #
 
 NAME	= BraiiiiiiinnnzzzZ
 
-CC		= c++
-CFLAG	= -Wall -Wextra -Werror -std=c++98 -pedantic
+CXX		= c++
+CXXFLAG	= -Wall -Wextra -Werror -std=c++98 -pedantic
 
 SRC		= ./main.cpp\
 		  ./Zombie.cpp\
@@ -23,12 +23,12 @@ SRC		= ./main.cpp\
 OBJS	= $(SRC:.cpp=.o)
 
 %.o : %.cpp
-		$(CC) $(CFLAG) -c -o $@ $^
+		$(CXX) $(CXXFLAG) -c -o $@ $^
 
 all : $(NAME)
 
 $(NAME) : $(OBJS)
-		$(CC) $(CFLAG) -o $@ $^
+		$(CXX) $(CXXFLAG) -o $@ $^
 
 clean :
 		rm -f $(OBJS)
