cpp01 검토및 함수포인터 수정

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,6 +66,9 @@
 		"stack": "cpp",
 		"__functional_03": "cpp",
 		"memory_resource": "cpp",
-		"filesystem": "cpp"
+		"filesystem": "cpp",
+		"__bits": "cpp",
+		"clocale": "cpp",
+		"cerrno": "cpp"
 	}
 }
