--- a/cpp04/ex02.1/Makefile
+++ b/cpp04/ex02.1/Makefile
@@ -16,7 +16,7 @@ CXX		= c++
 CXXFLAG	= -Wall -Wextra -Werror -std=c++98 -pedantic
 
 SRC		= ./main.cpp\
-		  ./AAnimal.cpp\
+		  ./Animal.cpp\
 		  ./Cat.cpp\
 		  ./Dog.cpp\
 		  ./Brain.cpp
