--- a/cpp06/ex02/Makefile
+++ b/cpp06/ex02/Makefile
@@ -6,16 +6,20 @@
 #    By: jiwolee <jiwolee@student.42seoul.kr>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/11/16 15:54:12 by jiwolee           #+#    #+#              #
-#    Updated: 2022/12/13 15:41:59 by jiwolee          ###   ########seoul.kr   #
+#    Updated: 2022/12/13 12:18:08 by jiwolee          ###   ########seoul.kr   #
 #                                                                              #
 # **************************************************************************** #
 
-NAME	= ex01
+NAME	= ex02
 
 CXX		= c++
 CXXFLAG	= -Wall -Wextra -Werror -std=c++98 -pedantic
 
-SRC		= ./main.cpp
+SRC		= ./main.cpp\
+		  ./Base.cpp\
+		  ./A.cpp\
+		  ./B.cpp\
+		  ./C.cpp
 
 OBJS	= $(SRC:.cpp=.o)
 
