--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,6 +65,13 @@
 		"typeinfo": "cpp",
 		"unordered_map": "cpp",
 		"utility": "cpp",
-		"vector": "cpp"
+		"vector": "cpp",
+		"filesystem": "cpp",
+		"list": "cpp",
+		"*.tpp": "cpp",
+		"set": "cpp",
+		"__tree": "cpp",
+		"map": "cpp",
+		"numeric": "cpp"
 	}
 }
