--- a/cpp09/ex02/Makefile
+++ b/cpp09/ex02/Makefile
@@ -3,14 +3,14 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: jiwolee <jiwolee@student.42seoul.kr>       +#+  +:+       +#+         #
+#    By: jiwolee <jiwolee@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/11/16 15:54:12 by jiwolee           #+#    #+#              #
-#    Updated: 2023/03/16 20:54:02 by jiwolee          ###   ########seoul.kr   #
+#    Updated: 2023/04/01 16:11:45 by jiwolee          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME	= PMergeMe
+NAME	= PmergeMe
 
 CXX		= c++
 CXXFLAG	= -Wall -Wextra -Werror -std=c++98 -pedantic
